V6.5.1 (Under developement)
  * Fixed issue #687 by extracting new method DeleteNodes() from existing DeleteSelectedNodes().
  * Fixed issue #689: Possible Integer overflow in PaintColumnHeader() when dragging a column to first position.
    
V6.5: (18 Jan 2017)
  * License change from LGPL to "LGPL with static linking exception". See issue #673 for details.
  * Enhancement #662: Background image now supports transparency
  * Fixed #677: Improved per monitor dpi awareness. NodeHeight is now scaled as well if toAutoScale is set. 
  * Fixed #289: HintMode hmHintAndDefault: Default Hint does not change to node specific hint when the mouse is moved to a node.
  * Fixed #674: HintMode hmHintAndDefault: If the BidiMode is right to left, the Default Hint fails to appear
  * Fixed #139: hoDblClickResize doesn't work correctly with InitalState ivsMultiline
  * Fixed #668: Removed unnecessary #include <ShlObj.hpp>
  * Fixed #670: Make it possible to override RangeX
  * Fixed #676: VCL themed scrollbar does not update correctly after adding children
  * Fixed #626: Wrong hot node selection during mouse movement over different nodes
  * Fixed #679: The OnChange event when right clicking a node should always be fired before the OnPopup event
  * Fixed #678: Occasional Access Violation in GetDisplayRect
  * Fixed #682: Drag & Drop range exception 
  
V6.4.1: (26 Oct 2016)
  * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
  * Fixed #663: Exception pressing return on an edited item with no columns)
  * Fixed #661: Minimal Demo 2 different problems, can't select on start up, multiple clicks causes error
  * Fixed problem with wrongly drawn checkbox in column headers.
  * VirtualTreePerItemAction now initializes all nodes before it works with them and changes e.g. the check state.